eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  labels:
    app: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: 131131726322.dkr.ecr.us-east-1.amazonaws.com/php-eks:v3
        ports:
        - containerPort: 80
