eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: default
spec:
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP   # ✅ changed from NodePort
